fix z-index issues

--- a/src/hero-slideshow/style.scss
+++ b/src/hero-slideshow/style.scss
@@ -29,10 +29,11 @@
 		position: absolute;
 		width: 100%;
 		top: 50%;
-		width: 100%;
+		max-width: 100%;
 		display: flex;
 		justify-content: space-between;
 		transform: translateY(-50%);
+		pointer-events: none; // Ensure the controls don't interfere with interactions
 	
 		.jg_blocks-hero_slideshow_control{
 			cursor: pointer;
@@ -40,6 +41,8 @@
 			padding: 0.75rem;
 			align-self: center;
 			font-size: larger;
+			pointer-events: all;
+			border-radius: .33rem;
 			&:hover {
 				transform: scale(0.95);
 			}
@@ -107,6 +110,7 @@
 			text-align: center;
 			font-size: larger;
 			display: inline-block;
+			border-radius: .33rem;
 
 			&:hover{
 				transform: scale(0.95);
